kotlin-ide/idea/testData/compiler/loadJava/compiledKotlin/fromLoadJava/kotlinSignature/error/WrongFieldName.kt
package test

import java.util.*

public open class WrongFieldName {
    public var foo : String? = ""
}
